# cookiecutter-robust-python

./: .cz.toml  .env  .gitignore  .pytest.ini  .readthedocs.yml  .ruff.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cookiecutter.json  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  01_template_bug.yml  02_feature_request.yml  02_generated_project_bug.yml  03_documentation.yml  04_dependency_update.yml  04_template_feature.yml  05_generated_project_feature.yml  06_dependency_update.yml  config.yml
.github/workflows/: merge-demo-feature.yml  release-template.yml  sync-demos.yml  update-demo.yml
docs/: conf.py  getting-started-template-contributing.md  maintenance.md  our-chosen-toolchain.md  philosophy.md  quickstart.md  usage.md
docs/topics/: 01_project-structure.md  04_code-linting.md  05_type-checking.md  18_pre-commit-hooks.md
docs/workflow/: index.md
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: bump-version.py  generate-demo.py  get-release-notes.py  lint-from-demo.py  merge-demo-feature.py  release-demo.py  setup-release.py  tag-version.py  update-demo.py  util.py
tests/: conftest.py  constants.py  util.py
tests/integration_tests/: test_robust_python_demo.py
tests/unit_tests/: test_github_workflows.py
tools/: __init__.py  config.py  demo.py  docs.py  lint.py  util.py
{{cookiecutter.project_name}}/: .gitlab-ci.yml  CONTRIBUTING.md  README.md  bitbucket-pipelines.yml  noxfile.py  pyproject.toml  pyrightconfig.json
{{cookiecutter.project_name}}/.github/workflows/: test-python.yml  test-rust.yml  typecheck-python.yml
{{cookiecutter.project_name}}/scripts/: setup-release.py
