[project]
name = "cookiecutter-robust-python"
version = "2025.12.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "cookiecutter>=2.6.0",
    "cruft>=2.16.0",
    "gitpython>=3.1.44",
    "loguru>=0.7.3",
    "platformdirs>=4.3.8",
    "python-dotenv>=1.0.0",
    "retrocookie>=0.4.3",
    "typer>=0.15.4",
]

[dependency-groups]
dev = [
    "commitizen>=4.8.2",
    "nox>=2025.5.1",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser[linkify]>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
]
lint = [
    "ruff>=0.11.9",
]
security = [
    "bandit>=1.8.3",
    "pip-audit>=2.9.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
typecheck = [
    "basedpyright>=1.34.0",
]
