[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_name}}"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
license = "{{cookiecutter.license}}"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">={{cookiecutter.min_python_version}},<4.0"
keywords = [
    "{{cookiecutter.project_name.replace('_', '-')}}",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
{%- for version in cookiecutter.python_versions %}
    "Programming Language :: Python :: {{ version }}",
{%- endfor %}
    "{{ cookiecutter.development_status }}"
]
dependencies = [
    "loguru>=0.7.3",
    "platformdirs>=4.3.8",
    "typer>=0.15.4",
    "typing-extensions>=4.13.2"
]

[dependency-groups]
dev = [
    "commitizen>=4.7.0",
    "nox>=2025.5.1",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.11.9",
    "bandit>=1.8.3",
    "pip-audit>=2.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pyright>=1.1.400",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-typer>=0.5.1",
]

[project.urls]
Homepage = "https://{{ cookiecutter.repository_host }}/{{ cookiecutter.repository_path }}"
Repository = "https://{{ cookiecutter.repository_host }}/{{ cookiecutter.repository_path }}"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

{% if cookiecutter.add_rust_extension -%}
[build-system]
requires = ["maturin>=1.9.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
rust-src = "rust"
{% else -%}
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
{% endif -%}
